[package]
name = "CLIRustWeatherAppTom"
version = "0.1.0"
edition = "2024"
version = "0.1.0"
edition = "2021"
description = "Rust CLI project for Programming Language course"
license = "MIT"
repository = "https://github.com/yourgithub/weatherapp"
readme = "README.md"

[dependencies]
clearscreen = "4.0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1"
dotenv = "0.15"
